k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: romanstream
  labels:
    app.kubernetes.io/name: romanstream
