k8s/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: romanstream
  labels:
    app: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: rocky659803/marvin-producer:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: romanstream
spec:
  selector:
    app: producer
  ports:
    - port: 5000
      targetPort: 5000
